@@ -141,7 +141,7 @@ the dealer, who must act in accordance to his own hand only.
 \label{sec:rules:dealer-play}
 
 \begin{table}[ht!]
-\caption{Dealer's state transition table (hits on soft-17)}
+\caption{Dealer's hitting state transition table (hits on soft-17)}
 \begin{center}
 \input tables/dealer-hit-H17
 \end{center}
@@ -149,7 +149,7 @@ the dealer, who must act in accordance to his own hand only.
 \end{table}
 
 \begin{table}[ht!]
-\caption{Dealer's state transition table (stands on soft-17)}
+\caption{Dealer's hitting state transition table (stands on soft-17)}
 \begin{center}
 \input tables/dealer-hit-S17
 \end{center}
@@ -326,7 +326,7 @@ edges \emph{before} each hand is dealt.
 \label{sec:rules:player-hit}
 
 \begin{table}[ht!]
-\caption{Player's state transition table}
+\caption{Player's hitting state transition table}
 \begin{center}
 \input tables/player-hit
 \end{center}
@@ -342,7 +342,7 @@ This table just shows possible transitions,
 not all of them are necessarily favorable.
 
 \begin{table}[ht!]
-\caption{Player's final split transition table}
+\caption{Player's final split state transition table}
 \begin{center}
 \input tables/player-final-split
 \end{center}
@@ -350,7 +350,7 @@ not all of them are necessarily favorable.
 \end{table}
 
 \begin{table}[ht!]
-\caption{Player's resplit transition table}
+\caption{Player's resplit state transition table}
 \begin{center}
 \input tables/player-resplit
 \end{center}
